tests/errors/typedef-array.h
/* Array typedef */
typedef int MYINTARRAY[10];
